@@ -17,6 +17,7 @@ munin (work)
   * Plugin: Major improvements to sunos/io_ops,bytes,busy, by Lupe Christoph
     (SF#1077898).
   * Plugin: Portability enhancementes to sunos/fs_df (SF#1077903).
+  * Plugin: linux/fw_forwarded_local now initialises properly (Deb#284673).
 
 munin (1.1.7)
 
